--- a/frontend/socialNetworkFrontend/src/Components/Navigation/Navigation.module.scss
+++ b/frontend/socialNetworkFrontend/src/Components/Navigation/Navigation.module.scss
@@ -7,6 +7,7 @@
   margin-top: 0px;
   overflow-y: hidden;
   border-right: 0.5px solid rgb(83, 83, 90);
+  padding-left: 10px;
 }
 .header {
   height: 100px;
@@ -22,6 +23,7 @@
   align-items: center;
   justify-content: flex-start;
   gap: 8px;
+  cursor: pointer;
 }
 .text {
   font-size: 16px;
@@ -48,8 +50,10 @@
   justify-content: center;
   align-items: center;
   gap: 5px;
+  cursor: pointer;
   .button_text {
-    color: black;
+    color: #081824;
+  ;
   }
 }
 .create_new:hover {
