--- a/frontend/socialNetworkFrontend/src/Pages/MainPage/MainPage.module.scss
+++ b/frontend/socialNetworkFrontend/src/Pages/MainPage/MainPage.module.scss
@@ -1,9 +1,9 @@
 .wrapper {
   margin: 0 auto;
-  background-color: black;
+  background-color: #081824;
   width: 100%;
   height: 1000px;
-  color: white;
+  color: #ccccd9;
   font-weight: 700;
   font-family: 'Favorit Modern', 'Helvetica Neue', 'HelveticaNeue', Arial, Helvetica, sans-serif;
 }
